modifique el index.html se creo quienes somo.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <center><p>Nombre de aprendices Ficha 2358354 Tec Soft Caicedo</p></center>
+	<p>Instructor: Giovanny Bustamante Maldonado</p>
+	
 </body>
 </html>
